[package]
name = "trove"
version = "0.1.0"
authors = ["rmsyn <rmsynchls@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "trove"
test = false
bench = false

[dependencies]
bitfield = "0.14"
panic-halt = "0.2.0"
ufmt = "0.1.0"
nb = "0.1.2"
embedded-hal = "0.2.3"
lock_api = "0.4"
usb-device = "0.2"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "7dfa6d322b9df98b2d98afe0e14a97afe0187ac1"
features = ["arduino-leonardo"]

[dependencies.usbd-hid]
version = "0.6"
git = "https://github.com/twitchyliquid64/usbd-hid"

[dependencies.atmega-usbd]
version = "0.1"
git = "https://github.com/agausmann/atmega-usbd"

[dependencies.avr-device]
version = "0.5"
features = ["atmega32u4"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
